--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,19 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static '/css/main.css' %}">
     <title> {% block title %} {% endblock %}</title>
+    {% block head %}{% endblock %}
 </head>
 <body>
-    {% block body %}{% endblock %}
+    {% include 'components/header.html' %}
+
+    {% block main %}{% endblock %}
+
+    {% include 'components/footer.html' %}
+    {% block javascript %}{% endblock %}
 </body>
 </html>
