--- a/templates/sample.html
+++ b/templates/sample.html
@@ -4,7 +4,7 @@
 {% block title %}{% endblock %}
 
 {% block head %}
-<link rel="stylesheet" href="{% static '/css/home.css' %}">
+<link rel="stylesheet" href="style.css">
 {% endblock %}
 
 {% block main %}
