Login page and footer added

--- a/templates/components/footer.html
+++ b/templates/components/footer.html
@@ -1,3 +1,26 @@
 <footer>
-    This is the footer
+  <div class="footer-container">
+    <div class="legal-policy">
+      <p>LEGAL POLICY</p>
+      <ul>
+        <li><a href="#"> Terms of service </a></li>
+        <li><a href="#"> Return policy </a></li>
+      </ul>
+    </div>
+    <div class="Categories">
+      <p>Categories</p>
+      <ul>
+        <li><a href="#">Men</a></li>
+        <li><a href="#"> Women </a></li>
+        <li><a href="#"> Children </a></li>
+      </ul>
+    </div>
+    <div class="social-platforms">
+      <p>SOCIAL PLATFORMS</p>
+      <img src="" alt="" />
+      <img src="" alt="" />
+      <img src="" alt="" />
+      <span>Copyright &copy; 2023</span>
+    </div>
+  </div>
 </footer>
