--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,11 +1,47 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Login</h1>
-</body>
-</html>
+{% extends './../base.html' %}
+{% load static %}
+
+{% block title %}{% endblock %}
+
+{% block head %}
+<link rel="stylesheet" href="{% static 'css/login.css' %}">
+{% endblock %}
+
+{% block main %}
+<main class="container">
+  <div class="main">
+    <div class="login-form-container">
+      <form>
+        <div class="login-text">LOG IN</div>
+        <div class="email-cont">
+          <label for="username">Email Adress:</label>
+          <input type="text" id="email" name="email" required class="input" />
+        </div>
+        <div class="password-cont">
+          <label for="password">Password:</label>
+          <input
+            type="password"
+            id="password"
+            name="password"
+            required
+          />
+        </div>
+        <div class="submit">
+          <input type="submit" value="LOG IN" class="btn-primary" />
+        </div>
+        <div class="exceptions">
+          <ul>
+            <li><a href="#">Forgot your password ?</a></li>
+            <li><a href="#">Do not have an account ?</a></li>
+          </ul>
+        </div>
+      </form>
+    </div>
+  </div>
+
+</main>
+{% endblock %}
+
+{% block javascript %}
+<script src=""></script>
+{% endblock %}
