--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;500&family=Kalam:wght@300;400;700&family=Poppins:wght@100;200;300;400;500&family=Roboto:wght@100;300;400;500&family=Rubik:wght@300;400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;500&family=Kalam:wght@300;400;700&family=Poppins:wght@100;200;300;400;500&family=Roboto:wght@100;300;400;500&family=Rubik:wght@300;400;500;700&display=swap");
 * {
   padding: 0;
   margin: 0;
@@ -16,14 +16,15 @@
   --mid-grey: #7a7a7a;
 
   --btn-primary-color: var(--accent-color);
-  --btn-secondary-color:var(--dark-grey);
+  --btn-secondary-color: var(--dark-grey);
+  --btn-small-color: var(--primary-color);
   --btn-primary-text-color: var(--lightgrey);
   --btn-secondary-text-color: var(--primary-color);
 
   --text-primary-color: var(--secondary-color);
-  --text-secondary-color:var(--mid-grey);
+  --text-secondary-color: var(--mid-grey);
   --text-light-color: var(--light-grey);
-  --text-superlight-color:var(--primary-color);
+  --text-superlight-color: var(--primary-color);
   --text-accent-color: var(--accent-color);
 }
 
@@ -62,36 +63,48 @@ main {
 .btn-secondary {
   background-color: var(--btn-secondary-color);
   color: var(--btn-secondary-text-color);
+  width: 16.6rem;
+  height: 2.2rem;
+  border: none;
+  border-radius: 1.7rem;
+  margin-bottom: 1.7rem;
+  padding-top: 0.3rem;
+  padding-bottom: 0.3rem;
+  padding-left: 2.08rem;
+  padding-right: 2.08rem;
+  font-size: 0.9rem;
+  font-weight: 700;
+  cursor: pointer;
 }
-footer{
+footer {
   background-color: var(--dark-grey);
   height: 12.8rem;
-  width:100%;
+  width: 100%;
   color: var(--text-superlight-color);
 }
-footer p{
+footer p {
   font-weight: 700;
   font-size: 1.3rem;
-  letter-spacing: .06rem;
+  letter-spacing: 0.06rem;
 }
-footer li{
+footer li {
   list-style: none;
-  margin-top: .4rem;
-  margin-bottom: .8rem;
+  margin-top: 0.4rem;
+  margin-bottom: 0.8rem;
 }
-footer a{
+footer a {
   cursor: pointer;
   text-decoration: none;
   color: var(--text-superlight-color);
 }
-.social-platforms span{
+.social-platforms span {
   color: var(--text-light-color);
 }
-.footer-container{
+.footer-container {
   display: flex;
   flex-direction: row;
   width: 100%;
 }
-.footer-container div{
+.footer-container div {
   margin: 1.5rem 9rem 0 7rem;
 }
