--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -5,11 +5,197 @@
 
 {% block head %}
 <link rel="stylesheet" href="{% static '/css/home.css' %}">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 {% endblock %}
 
 {% block main %}
     <main class="container">
-        <h1>Home</h1>
+        <div class="search-bar">
+            <input type="text" name="query" placeholder="">
+            <button>
+                <i class="fa fa-search" aria-hidden="true"></i>
+            </button>
+        </div>
+        <div class="landing">
+            <div>
+                <h2>Welcome to <span class="landing-accent">Apparel Avenue</span></h2>
+                <p>Your one stop shop for your own family</p>
+            </div>
+            <img src="" alt="home image">
+        </div>
+        <div class="product-container">
+            <section class="primary-display">
+                <h3 class="decorated-heading">MEN</h3>
+                <div class="product-section">
+                    <div class="product-card">
+                        <img src="" alt="product img man">
+                        <div>
+                            <span>KSH 2000</span>
+                            <div>
+                                <h4>Black Sweat Shirt</h4>
+                                <p>
+                                    Lorem, ipsum dolor vsit amet consectetur adipisicing elit. Nobis, recusandae.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis, recusandae.
+                                </p>
+                            </div>
+                            <button class="btn-secondary">VIEW PRODUCT</button>
+                        </div>
+                    </div>
+                    <div class="product-card">
+                        <img src="" alt="product img man">
+                        <div>
+                            <span>KSH 2000</span>
+                            <div>
+                                <h4>Black Sweat Shirt</h4>
+                                <p>
+                                    Lorem, ipsum dolor vsit amet consectetur adipisicing elit. Nobis, recusandae.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis, recusandae.
+                                </p>
+                            </div>
+                            <button class="btn-secondary">VIEW PRODUCT</button>
+                        </div>
+                    </div>
+                    <div class="product-card">
+                        <img src="" alt="product img man">
+                        <div>
+                            <span>KSH 2000</span>
+                            <div>
+                                <h4>Black Sweat Shirt</h4>
+                                <p>
+                                    Lorem, ipsum dolor vsit amet consectetur adipisicing elit. Nobis, recusandae.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis, recusandae.
+                                </p>
+                            </div>
+                            <button class="btn-secondary">VIEW PRODUCT</button>
+                        </div>
+                    </div>
+                    <div class="product-card">
+                        <img src="" alt="product img man">
+                        <div>
+                            <span>KSH 2000</span>
+                            <div>
+                                <h4>Black Sweat Shirt</h4>
+                                <p>
+                                    Lorem, ipsum dolor vsit amet consectetur adipisicing elit. Nobis, recusandae.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis, recusandae.
+                                </p>
+                            </div>
+                            <button class="btn-secondary">VIEW PRODUCT</button>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="primary-display">
+                <h3>WOMEN</h3>
+                <div class="product-section">
+                    <div class="product-card">
+                        <img src="" alt="product img woman">
+                        <div>
+                            <span>KSH 2000</span>
+                            <div>
+                                <h4>Black Sweat Shirt</h4>
+                                <p>
+                                    Lorem, ipsum dolor vsit amet consectetur adipisicing elit. Nobis, recusandae.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis, recusandae.
+                                </p>
+                            </div>
+                            <button class="btn-secondary">VIEW PRODUCT</button>
+                        </div>
+                    </div>
+                    <div class="product-card">
+                        <img src="" alt="product img woman">
+                        <div>
+                            <span>KSH 2000</span>
+                            <div>
+                                <h4>Black Sweat Shirt</h4>
+                                <p>
+                                    Lorem, ipsum dolor vsit amet consectetur adipisicing elit. Nobis, recusandae.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis, recusandae.
+                                </p>
+                            </div>
+                            <button class="btn-secondary">VIEW PRODUCT</button>
+                        </div>
+                    </div>
+                    <div class="product-card">
+                        <img src="" alt="product img woman">
+                        <div>
+                            <span>KSH 2000</span>
+                            <div>
+                                <h4>Black Sweat Shirt</h4>
+                                <p>
+                                    Lorem, ipsum dolor vsit amet consectetur adipisicing elit. Nobis, recusandae.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis, recusandae.
+                                </p>
+                            </div>
+                            <button class="btn-secondary">VIEW PRODUCT</button>
+                        </div>
+                    </div>
+                    <div class="product-card">
+                        <img src="" alt="product img woman">
+                        <div>
+                            <span>KSH 2000</span>
+                            <div>
+                                <h4>Black Sweat Shirt</h4>
+                                <p>
+                                    Lorem, ipsum dolor vsit amet consectetur adipisicing elit. Nobis, recusandae.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis, recusandae.
+                                </p>
+                            </div>
+                            <button class="btn-secondary">VIEW PRODUCT</button>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="primary-display">
+                <h3>CHILDREN</h3>
+                <div class="product-section">
+                    <div class="product-card">
+                        <img src="" alt="product img child">
+                        <div>
+                            <span>KSH 2000</span>
+                            <div>
+                                <h4>Black Sweat Shirt</h4>
+                                <p>
+                                    Lorem, ipsum dolor vsit amet consectetur adipisicing elit. Nobis, recusandae.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis, recusandae.
+                                </p>
+                            </div>
+                            <button class="btn-secondary">VIEW PRODUCT</button>
+                        </div>
+                    </div>
+                    <div class="product-card">
+                        <img src="" alt="product img child">
+                        <div>
+                            <span>KSH 2000</span>
+                            <div>
+                                <h4>Black Sweat Shirt</h4>
+                                <p>
+                                    Lorem, ipsum dolor vsit amet consectetur adipisicing elit. Nobis, recusandae.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis, recusandae.
+                                </p>
+                            </div>
+                            <button class="btn-secondary">VIEW PRODUCT</button>
+                        </div>
+                    </div>
+                    <div class="product-card">
+                        <img src="" alt="product img child">
+                        <div>
+                            <span>KSH 2000</span>
+                            <div>
+                                <h4>Black Sweat Shirt</h4>
+                                <p>
+                                    Lorem, ipsum dolor vsit amet consectetur adipisicing elit. Nobis, recusandae.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis, recusandae.
+                                </p>
+                            </div>
+                            <button class="btn-secondary">VIEW PRODUCT</button>
+                        </div>
+                    </div>
+                    <div class="product-card">
+                        <img src="" alt="product img child">
+                        <div>
+                            <span>KSH 2000</span>
+                            <div>
+                                <h4>Black Sweat Shirt</h4>
+                                <p>
+                                    Lorem, ipsum dolor vsit amet consectetur adipisicing elit. Nobis, recusandae.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis, recusandae.
+                                </p>
+                            </div>
+                            <button class="btn-secondary">VIEW PRODUCT</button>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
     </main>
 {% endblock %}
 
