--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2,15 +2,16 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 :root{
-    --primary-color: #007bff;
-    --accent-color: #6c757d;
-    --secondary-color: #6c757d;
-    --light-grey: #f8f9fa;
-    --mid-grey: #dee2e6;
-    --dark-grey: #343a40;
+    --primary-color: #FFFFFF;
+    --accent-color: #4A2DFC;
+    --secondary-color: #0C0101;
+    --light-grey: #D9D9D9;
+    --mid-grey: #7A7A7A;
+    --dark-grey:  #353535;
 
     --btn-primary-color: var(--accent-color);
     --btn-secondary-color: #6c757d;
@@ -19,7 +20,7 @@
 
     --text-primary-color: #212529;
     --text-secondary-color: #6c757d;
-    --text-accent-color: #f8f9fa;
+    --text-accent-color: #4A2DFC;
     --text-light-color: #fff;
 }
 
@@ -46,4 +47,6 @@ main{
 .btn-secondary{
     background-color: var(--btn-secondary-color);
     color: var(--btn-secondary-text-color);
+    width: 220px;
+    height: 40px;
 }
