--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -21,15 +21,15 @@
                 <h2>Welcome to <span class="landing-accent">Apparel Avenue</span></h2>
                 <p>Your one stop shop for your own family</p>
             </div>
-            <img src="" alt="home image">
+            <img src="{% static '/images/Proposed hero 1.png' %}" alt="home image">
         </div>
         <div class="product-container">
             <section class="primary-display">
                 <h3 class="decorated-heading">MEN</h3>
                 <div class="product-section">
                     <div class="product-card">
-                        <img src="" alt="product img man">
-                        <div>
+                        <img src="{% static '/images/card1 1.png' %}" alt="product img man">
+                        <div class="product">
                             <span>KSH 2000</span>
                             <div>
                                 <h4>Black Sweat Shirt</h4>
@@ -41,8 +41,8 @@
                         </div>
                     </div>
                     <div class="product-card">
-                        <img src="" alt="product img man">
-                        <div>
+                        <img src="{% static '/images/card1 1.png' %}" alt="product img man">
+                        <div class="product">
                             <span>KSH 2000</span>
                             <div>
                                 <h4>Black Sweat Shirt</h4>
@@ -54,8 +54,8 @@
                         </div>
                     </div>
                     <div class="product-card">
-                        <img src="" alt="product img man">
-                        <div>
+                        <img src="{% static '/images/card1 1.png' %}" alt="product img man">
+                        <div class="product">
                             <span>KSH 2000</span>
                             <div>
                                 <h4>Black Sweat Shirt</h4>
@@ -67,8 +67,8 @@
                         </div>
                     </div>
                     <div class="product-card">
-                        <img src="" alt="product img man">
-                        <div>
+                        <img src="{% static '/images/card1 1.png' %}" alt="product img man">
+                        <div class="product">
                             <span>KSH 2000</span>
                             <div>
                                 <h4>Black Sweat Shirt</h4>
@@ -85,8 +85,8 @@
                 <h3>WOMEN</h3>
                 <div class="product-section">
                     <div class="product-card">
-                        <img src="" alt="product img woman">
-                        <div>
+                        <img src="{% static '/images/card1 1.png' %}" alt="product img woman">
+                        <div class="product">
                             <span>KSH 2000</span>
                             <div>
                                 <h4>Black Sweat Shirt</h4>
@@ -98,8 +98,8 @@
                         </div>
                     </div>
                     <div class="product-card">
-                        <img src="" alt="product img woman">
-                        <div>
+                        <img src="{% static '/images/card1 1.png' %}" alt="product img woman">
+                        <div class="product">
                             <span>KSH 2000</span>
                             <div>
                                 <h4>Black Sweat Shirt</h4>
@@ -111,8 +111,8 @@
                         </div>
                     </div>
                     <div class="product-card">
-                        <img src="" alt="product img woman">
-                        <div>
+                        <img src="{% static '/images/card1 1.png' %}" alt="product img woman">
+                        <div class="product">
                             <span>KSH 2000</span>
                             <div>
                                 <h4>Black Sweat Shirt</h4>
@@ -124,8 +124,8 @@
                         </div>
                     </div>
                     <div class="product-card">
-                        <img src="" alt="product img woman">
-                        <div>
+                        <img src="{% static '/images/card1 1.png' %}" alt="product img woman">
+                        <div class="product">
                             <span>KSH 2000</span>
                             <div>
                                 <h4>Black Sweat Shirt</h4>
@@ -142,8 +142,8 @@
                 <h3>CHILDREN</h3>
                 <div class="product-section">
                     <div class="product-card">
-                        <img src="" alt="product img child">
-                        <div>
+                        <img src="{% static '/images/card1 1.png' %}" alt="product img child">
+                        <div class="product">
                             <span>KSH 2000</span>
                             <div>
                                 <h4>Black Sweat Shirt</h4>
@@ -155,8 +155,8 @@
                         </div>
                     </div>
                     <div class="product-card">
-                        <img src="" alt="product img child">
-                        <div>
+                        <img src="{% static '/images/card1 1.png' %}" alt="product img child">
+                        <div class="product">
                             <span>KSH 2000</span>
                             <div>
                                 <h4>Black Sweat Shirt</h4>
@@ -168,8 +168,8 @@
                         </div>
                     </div>
                     <div class="product-card">
-                        <img src="" alt="product img child">
-                        <div>
+                        <img src="{% static '/images/card1 1.png' %}" alt="product img child">
+                        <div class="product">
                             <span>KSH 2000</span>
                             <div>
                                 <h4>Black Sweat Shirt</h4>
@@ -181,8 +181,8 @@
                         </div>
                     </div>
                     <div class="product-card">
-                        <img src="" alt="product img child">
-                        <div>
+                        <img src="{% static '/images/card1 1.png' %}" alt="product img child">
+                        <div class="product">
                             <span>KSH 2000</span>
                             <div>
                                 <h4>Black Sweat Shirt</h4>
