--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -11,7 +11,7 @@
 <main class="container">
   <div class="main">
     <div class="login-form-container">
-      <form method="post" action="{% url 'login' %}?next={{ request.GET.next | default:"/" }}">
+      <form method="post" action="{% url "accounts:login" %}?next={{ request.GET.next | default:"/" }}">
         {% csrf_token %}
         <div class="login-text">LOG IN</div>
         <div class="email-cont">
