--- a/static/css/main.css
+++ b/static/css/main.css
@@ -49,7 +49,7 @@ main {
   width: 16.6rem;
   height: 2.2rem;
   border: none;
-  border-radius: 1.7rem;
+  border-radius: 0;
   margin-bottom: 1.7rem;
   padding-top: 0.3rem;
   padding-bottom: 0.3rem;
@@ -66,7 +66,7 @@ main {
   width: 16.6rem;
   height: 2.2rem;
   border: none;
-  border-radius: 1.7rem;
+  border-radius: 0;
   margin-bottom: 1.7rem;
   padding-top: 0.3rem;
   padding-bottom: 0.3rem;
