--- a/static/css/product-detail.css
+++ b/static/css/product-detail.css
@@ -12,13 +12,21 @@
 .image-div {
   width: 25rem;
   height: 25rem;
-  background-color: black;
   margin-right: 1.6rem;
+}
+.image-div img {
+  height: 100%;
+  width: 100%;
 }
 .left-side {
   overflow-y: auto;
   padding: 1.1rem;
   height: 24rem;
+  scrollbar-width: thin;
+  scrollbar-color: transparent transparent;
+}
+.left-side::-webkit-scrollbar {
+  width: 0;
 }
 .primary-btn {
   border-radius: 0;
@@ -58,9 +66,13 @@ button {
 }
 .quantity-value {
   font-size: 0.8rem;
+  width: 2rem;
+  height: 100%;
   border-bottom: 0.09rem black solid;
   border-top: 0.09rem black solid;
-  width: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .quantity-btns {
   font-size: 0.9rem;
