--- a/templates/core/product-detail.html
+++ b/templates/core/product-detail.html
@@ -2,6 +2,7 @@
 {% block head %}
 <link rel="stylesheet" href="{% static 'css/product-detail.css' %}" />
 {% endblock %} {% block main %}
+{% comment %} {{ product }} use product obj {% endcomment %}
 <main class="container">
   <div class="main-container">
     <div class="image-div">
