--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,22 +1,24 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    scroll-behavior: smooth;
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;500&family=Kalam:wght@300;400;700&family=Poppins:wght@100;200;300;400;500&family=Roboto:wght@100;300;400;500&family=Rubik:wght@300;400;500;700&display=swap");
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+  font-family: Poppins;
 }
 
-:root{
-    --primary-color: #FFFFFF;
-    --accent-color: #4A2DFC;
-    --secondary-color: #0C0101;
-    --light-grey: #D9D9D9;
-    --mid-grey: #7A7A7A;
-    --dark-grey:  #353535;
+:root {
+  --primary-color: #ffffff;
+  --accent-color: #4a2dfc;
+  --secondary-color: #0c0101;
+  --light-grey: #d9d9d9;
+  --mid-grey: #7a7a7a;
+  --dark-grey: #353535;
 
   --btn-primary-color: var(--accent-color);
   --btn-secondary-color: var(--dark-grey);
   --btn-small-color: var(--primary-color);
-  --btn-primary-text-color: var(--lightgrey);
+  --btn-primary-text-color: var(--primary-color);
   --btn-secondary-text-color: var(--primary-color);
 
   --text-primary-color: var(--secondary-color);
@@ -47,7 +49,7 @@ main {
   width: 16.6rem;
   height: 2.2rem;
   border: none;
-  border-radius: 1.7rem;
+  border-radius: 0;
   margin-bottom: 1.7rem;
   padding-top: 0.3rem;
   padding-bottom: 0.3rem;
@@ -64,7 +66,7 @@ main {
   width: 16.6rem;
   height: 2.2rem;
   border: none;
-  border-radius: 1.7rem;
+  border-radius: 0;
   margin-bottom: 1.7rem;
   padding-top: 0.3rem;
   padding-bottom: 0.3rem;
@@ -103,6 +105,17 @@ footer a {
   flex-direction: row;
   width: 100%;
 }
-.footer-container div {
+
+.icons-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.legal-policy,
+.Categories,
+.social-platforms {
   margin: 1.5rem 9rem 0 7rem;
 }
