--- a/templates/core/product-detail.html
+++ b/templates/core/product-detail.html
@@ -47,7 +47,7 @@
         <p class="sub-title">Quantity</p>
         <div class="quantity">
           <button class="quantity-btns">-</button>
-          <p class="quantity-value">1</p>
+          <div><p class="quantity-value">1</p></div>
           <button class="quantity-btns">+</button>
         </div>
       </div>
