--- a/templates/components/header.html
+++ b/templates/components/header.html
@@ -1,3 +1,10 @@
 <header>
-    This is the header
+    <div class="header-container">
+        <button class="hambugger"><i class="fa fa-bars" aria-hidden="true"></i></button>
+        <h3>Apparel Avenue</h3>
+        <div class="header-icons">
+            <button><i class="fa fa-user" aria-hidden="true"></i></button>
+            <button> <i class="fa fa-shopping-bag" aria-hidden="true"></i></button>
+        </div>
+    </div>
 </header>
