--- a/static/css/main.css
+++ b/static/css/main.css
@@ -63,7 +63,7 @@ main {
 .btn-secondary {
   background-color: var(--btn-secondary-color);
   color: var(--btn-secondary-text-color);
-  width: 16.6rem;
+  width: 100%;
   height: 2.2rem;
   border: none;
   border-radius: 0;
@@ -118,4 +118,26 @@ footer a {
 .Categories,
 .social-platforms {
   margin: 1.5rem 9rem 0 7rem;
+}
+
+header{
+    width: 100%;
+    height: 4rem;
+    background-color: var(--secondary-color);
+    padding-bottom: 1rem;
+}
+.header-container{
+    display: flex;
+    justify-content: space-between;
+    color: var(--text-superlight-color);
+    align-items: center;
+    height: 100%;
+}
+.header-icons{
+    display: flex;
+    justify-content: space-between;
+    padding-right: 1.2rem;
+}
+.hambugger{
+    padding-left: 1.2rem;
 }
