--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -11,10 +11,12 @@
 {% block main %}
     <main class="container">
         <div class="search-bar">
-            <input type="text" name="query" placeholder="">
-            <button>
-                <i class="fa fa-search" aria-hidden="true"></i>
-            </button>
+            <form action="/search/" method="GET">
+                <input type="text" name="query" placeholder="">
+                <button type="submit">
+                    <i class="fa fa-search" aria-hidden="true"></i>
+                </button>
+            </form>
         </div>
         <div class="landing">
             <div>
