--- a/templates/accounts/signup.html
+++ b/templates/accounts/signup.html
@@ -1,11 +1,48 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Signup</h1>
-</body>
-</html>
+{% extends './../base.html' %}
+{% load static %}
+
+
+{% block title %}{% endblock %}
+
+{% block head %}
+<link rel="stylesheet" href="../static/css/signUP.css">
+{% endblock %}
+
+{% block main %}
+    <body>
+        <div class="sign-up">
+            <h3>SIGN UP</h3>
+            <form method="post" action="{% url "accounts:signup" %}">
+                {% csrf_token %}
+                <section class="input-fields">
+                    <label for="firstName">First Name</label>
+                <input type="text" name="firstname">
+                </section>
+                <section class="input-fields">
+                    <label for="lastName">Last Name</label>
+                    <input type="text" name="lastname">
+                </section>
+                <section class="input-fields">   
+                    <label for="emailAddress">Email address</label>
+                    <input type="text" name="email">
+                </section>
+                <section class="input-fields">
+                    <label for="password">password</label>
+                    <input type="password" name="password">
+                </section>
+                <section class="input-fields">
+                    <label for="confirmPassword">confirm password</label>
+                    <input type="password" name="confirmpassword">
+                </section>
+                <hr>
+                <button class=".btn .btn-primary">CREATE ACCOUNT</button>
+                <P>Already have an account <a href="">log in</a> ?</P>
+        </form>
+        </div>
+    </body>
+{% endblock %}
+
+{% block javascript %}
+<script src=""></script>
+{% endblock %}
+
